--- a/index.htm
+++ b/index.htm
@@ -53,7 +53,7 @@
     
     <main>
         <!-- start of about -->
-        <section class="about text-center position-relative text-white p-5" id="about">
+        <section class="about text-center position-relative text-white pt-5" id="about">
             <div class="container">
                 <div class="about-content">
                     <h2 class="mb-4"><span class="text-capitalize">b</span>uilt with <span class="text-capitalize">b</span>ootstrap 5</h2>
@@ -96,12 +96,12 @@
                             <div class="h-100 d-flex">
                                 <div class= "my-auto text-center">
                                     <h4 class="text-capitalize text-white">moutains</h4>
-                                    <p class="w-58 text-white-50"><span class="text-capitalize">a</span>nother example of a project with its respective description. <span class="text-capitalize"></span>hese sections work well responsively as well, try this theme on a small screen!.</p>
+                                    <p class=" w-60 text-white-50"><span class="text-capitalize">a</span>nother example of a project with its respective description. <span class="text-capitalize"></span>hese sections work well responsively as well, try this theme on a small screen!.</p>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 p-0">
+                    <div class="col-md-6 p-0 ">
                         <img class="img-fluid w-100" src="./assets/img/demo-image-02.jpg" alt="moutains"/>
                     </div>
                    
